results/SVCOMP/conversational/log-ExMIT-2024_03_10_18_57_07.txt
import java.util.Random;

public class ExMIT {
    //@ requires \fresh(args);
    //@ ensures true;
    public static void main(String[] args) {
        if (new Random().nextInt() == 1) foo(0);
    }

    //@ requires i == 0;
    //@ ensures \result == 0;
    public static int foo(int i) {
        if (2 * (i + 1) == 10) {
            assert false;
            return 1;
        }
        return 0;
    }

    //@ requires true;
    //@ ensures \result == 0 || \result == 1;
    public static int boo(float i) {
        if ((i + 1) * 2 > 10) return 1;
        return 0;
    }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \fresh expression may not be in a requires clause
    //@ requires \fresh(args);
                        ^
1 error

import java.util.Random;

public class ExMIT {
    //@ ensures true;
    public static void main(String[] args) {
        if (new Random().nextInt() == 1) foo(0);
    }

    //@ requires i == 0;
    //@ ensures \result == 0;
    public static int foo(int i) {
        if (2 * (i + 1) == 10) {
            assert false;
            return 1;
        }
        return 0;
    }

    //@ requires true;
    //@ ensures \result == 0 || \result == 1;
    public static int boo(float i) {
        if ((i + 1) * 2 > 10) return 1;
        return 0;
    }
}

